<resources>
    <string name="app_name">Fashion Store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_pessoais">Dados pessoais</string>
    <string name="menu_enderecos">Meus endereços</string>
    <string name="menu_carrinho">Meu carrinho</string>
    <string name="menu_pedidos">Meus pedidos</string>

    <string name="phone_mask">(##) #####-####</string>
    <string name="date_mask">##/##/####</string>
    <string name="price_mask">R$ ####,##</string>
    <string name="title_activity_register_address">RegisterAddressActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>