<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pessoais"
            android:icon="@drawable/ic_menu_pessoais"
            android:title="@string/menu_pessoais" />
        <item
            android:id="@+id/nav_endereco"
            android:icon="@drawable/ic_menu_endereco"
            android:title="@string/menu_enderecos" />
        <item
            android:id="@+id/nav_carrinho"
            android:icon="@drawable/ic_menu_endereco"
            android:title="@string/menu_carrinho" />
        <item
            android:id="@+id/nav_pedidos"
            android:icon="@drawable/ic_menu_endereco"
            android:title="@string/menu_pedidos" />
    </group>
</menu>