<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.fashion_store.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_pessoais"
        android:name="com.example.fashion_store.ui.gallery.GalleryFragment"
        android:label="@string/menu_pessoais"
        tools:layout="@layout/fragment_pessoais" />

    <fragment
        android:id="@+id/nav_endereco"
        android:name="com.example.fashion_store.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_enderecos"
        tools:layout="@layout/fragment_endereco" />
    <fragment
        android:id="@+id/nav_carrinho"
        android:name="com.example.fashion_store.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_carrinho"
        tools:layout="@layout/fragment_carrinho" />

    <fragment
        android:id="@+id/nav_pedidos"
        android:name="com.example.fashion_store.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_pedidos"
        tools:layout="@layout/fragment_pedidos" />

</navigation>